--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -423,6 +423,34 @@
 /* iPhone X */
 @media only screen and (min-device-width: 480px) and (max-device-width: 768px) {
 
+  #chornayaladya {
+    display: none;
+  }
+
+  .zhdyom {
+  margin-left: 4.6em;
+  margin-top: 0;
+  }
+  .telshow {
+    display: none;
+  }
+
+  .littlesquares {
+    width: 100%;
+    height: 160px;
+  }
+
+  .littlesquare {
+    width: 160px;
+    height: 160px;
+  }
+
+  .bigsquare {
+    width: 320px;
+    height: 320px;
+  }
+
+  }
 
 
 }
