--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -982,8 +982,6 @@
 
   .telline1 {
     width: 100%;
-
-
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -1078,6 +1076,13 @@
     animation-play-state: paused;
   }
 
+  .phonenumber {
+    font-size: 12px;
+    margin-top: 2em;
+  }
+.basmannaya {
+  font-size: 12px;
+}
 
 }
 
