--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -779,8 +779,8 @@
 @media only screen and (min-width: 375px) and (max-width: 480px) {
 
   .bubbletext {
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.1rem;
     margin-top: 1.8em;
     margin-left: 1.3em;
   }
@@ -820,8 +820,8 @@
 
   #chornayaladya {
     position: absolute;
-    width: 100%
-    height: 100%
+    width: 100%;
+    height: 100%;
     justify-content: center;
     display: inline-block;
     align-items: center;
@@ -866,7 +866,7 @@
   }
 
   .item_bubble1 {
-    width: 290px;
+    width: 320px;
     height: 128px;
     top: 0;
     left: 6.9em;
@@ -876,7 +876,7 @@
     display: inline-block;
     width: 36px;
     height: 51px;
-    top: 4em;
+    top: 6.5em;
     left: 1em;
 
   }
@@ -884,50 +884,50 @@
     width: 180px;
     height: 60px;
     top: 11.2em;
-    left: 6.96em;
+    left: 7.2em;
   }
 
   .triangle2 {
     display: inline-block;
     width: 31.62px;
     height: 44.33px;
-    top: 1.4em;
-    left: 1em;
+    top: 2.3em;
+    left: 7em;
   }
   .item_bubble3 {
     width: 180px;
     height: 60px;
-    top: 19em;
-    left: 14em;
+    top: 18.8em;
+    left: 14.5em;
   }
 
   .triangle3 {
     display: inline-block;
     width: 29.26px;
     height: 40.75px;
-    top: 1.4em;
+    top: 2.6em;
     left: 1em;
   }
 
   .item_bubble4 {
     width: 340px;
     height: 120px;
-    top: 26em;
-    left: 7em;
+    top: 26.3em;
+    left: 7.26em;
   }
 
   .triangle4 {
     display: inline-block;
     width: 36.9px;
     height: 51.4px;
-    top: 4em;
+    top: 6em;
     left: 1em;
   }
 
   .item_bubble5 {
     width: 340px;
     height: 120px;
-    top: 33em;
+    top: 33.2em;
     left: 3.7em;
   }
 
@@ -1065,6 +1065,12 @@
   100% {transform: rotate(360deg);}
   }
 
+#chornayaladya {
+  width: 50%;
+  height: 50%;
+
+}
+
   .chornayaladya {
     position: absolute;
     justify-content: center;
@@ -1078,10 +1084,11 @@
 
   .phonenumber {
     font-size: 12px;
-    margin-top: 2em;
+    margin-top: 200px;
   }
 .basmannaya {
   font-size: 12px;
+  margin-top: 2em;
 }
 
 }
